testsuite/tests/typecheck/should_fail/T5691.stderr

T5691.hs:15:24: error:
    • Couldn't match type ‘p’ with ‘PrintRuleInterp’
      Expected type: PrintRuleInterp a
        Actual type: p a
    • In the first argument of ‘printRule_’, namely ‘f’
      In the second argument of ‘($)’, namely ‘printRule_ f’
      In the expression: MkPRI $ printRule_ f
    • Relevant bindings include f :: p a (bound at T5691.hs:14:9)

T5691.hs:24:10: error:
    • No instance for (Alternative RecDecParser)
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘MonadPlus RecDecParser’

T5691.hs:24:10: error:
    • No instance for (Monad RecDecParser)
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘MonadPlus RecDecParser’
